--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,7 +18,7 @@
 
 #lightContainer {
     background-color: black;
-    height: 450px;
+    height: auto;
     width: 150px;
     border-radius: 15px;
     padding: 15px;
@@ -27,6 +27,7 @@
 .light {
     height: 120px;
     width:120px;
+    margin: 10px;
     border-radius: 60px;
     background-color: white;
 }
